--- a/proiect_todos.css
+++ b/proiect_todos.css
@@ -88,7 +88,7 @@ body {
 }
 
 
-label.completed {
+.completed {
     font-weight: 100;
     font-size: 24px;
     font-family: Arial, Helvetica, sans-serif;
@@ -97,7 +97,7 @@ label.completed {
     background-color: white;
 }
 
-label.normal {
+.normal {
     font-weight: 100;
     font-size: 24px;
     font-family: Arial, Helvetica, sans-serif;
